--- a/zoocam.html
+++ b/zoocam.html
@@ -49,7 +49,7 @@
             text-decoration: underline;
         }
 
-        .zoo-content{
+        .zoo-content {
             margin-bottom: 50px;
         }
 
@@ -108,16 +108,16 @@
     <div class="container" id="zoocampage">
         <div class="row">
             <div class="col-md-12">
-                <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmcmidgard%2Fvideos%2F626860227505986%2F"
-                        width="100%" height="650px" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+                <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmcmidgard%2Fvideos%2F626985650826777%2F&width=1280"
+                        width="1280" height="720" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
                         allowTransparency="true" allowFullScreen="true"></iframe>
             </div>
         </div>
         <div class="zoo-content">
-        <h1>Zoo Cam</h1>
-        <p>Don't see a live video feed? Either we're offline or streaming to our <a
-                href="https://www.youtube.com/channel/UCtw4_2ahi3QpRFeWEMlJALg/live">YouTube Channel</a>.</p>
-        <p>This feed is still in Beta. We're still finding the best solution to stream to.</p>
+            <h1>Zoo Cam</h1>
+            <p>Don't see a live video feed? Either we're offline or streaming to our <a
+                    href="https://www.youtube.com/channel/UCtw4_2ahi3QpRFeWEMlJALg/live">YouTube Channel</a>.</p>
+            <p>This feed is still in Beta. We're still finding the best solution to stream to.</p>
         </div>
     </div>
 </div>
