--- a/zoocam.html
+++ b/zoocam.html
@@ -95,8 +95,7 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Visit the Zoo</a></li>
-                    <li id="zoo-cam"><a href="zoocam.html">Zoo Cam
-                        <span class="glyphicon glyphicon-record" aria-hidden="true"></span> </a></li>
+                    <li id="zoo-cam"><a href="zoocam.html"><span class="glyphicon glyphicon-facetime-video" aria-hidden="true"></span> Zoo Cam</a></li>
                     <li></li>
                 </ul>
             </div><!--/.nav-collapse -->
@@ -125,28 +124,67 @@
 <footer>
     <div class="container">
         <div class="col-md-3">
-            <h3>Community Links</h3>
+            <h3>Community</h3>
             <ul>
                 <li><a href="http://mc.midgardmc.com:8123" target="_blank">DynMap</a></li>
                 <li>
                     <a href="https://docs.google.com/document/d/1EFTXAGFpxewtfJz2Z84pFjjzoqI38OAehEI4YNLtsIM/edit?usp=sharing"
                        target="_blank">Rules</a>
                 </li>
+                <li><a data-toggle="tooltip" data-placement="right" title="Available when whitelisted.">Mumble</a></li>
+                <li><a href="zoocam.html">Zoo Cam</a></li>
+            </ul>
+        </div>
+        <div class="col-md-3">
+            <h3>Guides</h3>
+            <ul>
+                <li><a href="signshop.html">Sign Shop</a> </li>
             </ul>
         </div>
         <div class="col-md-3">
             <h3>Social</h3>
-            <ul>
-                <li><a href="#">Mumble</a></li>
-                <li><a href="https://twitter.com/intent/follow?&screen_name=midgardmc">Twitter</a></li>
-                <li><a href="https://www.facebook.com/mcmidgard">Facebook</a></li>
-                <li><a href="https://www.reddit.com/r/MidgardMC/">Reddit</a></li>
-                <li><a href="https://github.com/MidgardMC">GitHub</a></li>
-            </ul>
+            <div class="row">
+                <div class="col-md-2">
+                    <a href="https://twitter.com/intent/follow?&screen_name=midgardmc"><i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i></a>
+                </div>
+                <div class="col-md-2">
+                    <a href="https://www.facebook.com/mcmidgard"><i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i></a>
+                </div>
+                <div class="col-md-2">
+                    <a href="https://www.reddit.com/r/MidgardMC/"><i class="fa fa-reddit-square fa-3x" aria-hidden="true"></i></a>
+                </div>
+                <div class="col-md-2">
+                    <a href="https://github.com/MidgardMC"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
+                </div>
+            </div>
         </div>
-        <div class="col-md-3">
-        </div>
-        <div class="col-md-3">
+        <div class="col-md-3" id="footer-midgard">
+            <h3></h3>
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 90.2 90.2" style="enable-background:new 0 0 90.2 90.2; width: 50px; fill: #5e5e5e" xml:space="preserve">
+                <style type="text/css">
+	.st0-2 {
+        fill: #5e5e5e;
+        width: 40px;
+
+    }
+            </style>
+        <g id="Layer_2">
+	        <g id="Layer_1-2">
+		<path class="st0-2" d="M84.6,5.6v79h-79v-79L84.6,5.6 M90.2,0H0v90.2h90.2V0z"/>
+		<rect x="37.5" y="40" width="10.9" height="10.9"/>
+		<rect x="37.5" y="55.3" width="10.9" height="10.9"/>
+		<rect x="37.5" y="70.5" width="10.9" height="10.9"/>
+		<rect x="53.9" y="47" width="10.9" height="10.9"/>
+		<rect x="53.9" y="62.2" width="10.9" height="10.9"/>
+		<rect x="70.2" y="40" width="10.9" height="10.9"/>
+		<rect x="70.2" y="55.3" width="10.9" height="10.9"/>
+		<rect x="70.2" y="70.5" width="10.9" height="10.9"/>
+	        </g>
+        </g>
+            </svg>
+            <p>Midgard is a community that is entirely volunteer run.</p>
+            <p><span class="glyphicon glyphicon-copyright-mark" aria-hidden="true"></span> Copyright Midgard MC 2017</p>
         </div>
     </div>
     </div>
