Design/ Copy Update

--- a/zoocam.html
+++ b/zoocam.html
@@ -118,6 +118,8 @@
             <p>Don't see a live video feed? Either we're offline or streaming to our <a
                     href="https://www.youtube.com/channel/UCtw4_2ahi3QpRFeWEMlJALg/live">YouTube Channel</a>.</p>
             <p>This feed is still in Beta. We're still finding the best solution to stream to.</p>
+            <h3>Schedule</h3>
+            <p>Most days in the afternoon EST for around 6-12 hours.</p>
         </div>
     </div>
 </div>
