--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
 <header id="top">
-    <nav class="navbar navbar-default navbar-fixed-top navbar-midgard">
+    <nav class="navbar navbar-default navbar-fixed-top navbar-midgard" id="nav-scroll">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
@@ -78,7 +78,7 @@
                     <li><a class="smooth" href="#team">Team</a></li>
                     <li><a class="smooth" href="#servers">Servers</a></li>
                     <li><a href="http://imgur.com/a/0GWt1" target="_blank">Gallery</a></li>
-                    <li><a href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Join Us</a></li>
+                    <li><a href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Apply</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                            aria-expanded="false">Community Links<span class="caret"></span></a>
@@ -91,7 +91,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li id="zoo-cam"><a href="zoocam.html"><span class="glyphicon glyphicon-facetime-video" aria-hidden="true"></span> Zoo Cam</a></li>
+                    <!--<li id="zoo-cam"><a href="zoocam.html"><span class="glyphicon glyphicon-facetime-video" aria-hidden="true"></span> Zoo Cam</a></li>-->
                     <li></li>
                 </ul>
             </div><!--/.nav-collapse -->
@@ -100,59 +100,23 @@
 </header>
 <div class="content">
     <section id="feature-area">
-        <div id="carousel-midgard" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-                <li data-target="#carousel-midgard" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel-midgard" data-slide-to="1"></li>
-                <li data-target="#carousel-midgard" data-slide-to="2"></li>
-                <li data-target="#carousel-midgard" data-slide-to="3"></li>
-            </ol>
-
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
-                <div class="item active">
-                    <div id="homeimage1"></div>
-                    <div class="carousel-caption">
-                    </div>
-                </div>
-                <div class="item">
-                    <div id="homeimage2"></div>
-                    <div class="carousel-caption">
-                    </div>
-                </div>
-                <div class="item">
-                    <div id="homeimage3"></div>
-                    <!--<img class="img-responsive" src="images/homeslider1.png" alt="...">-->
-                    <div class="carousel-caption">
-                    </div>
-                </div>
-                <div class="item">
-                    <div id="homeimage4"></div>
-                    <div class="carousel-caption">
-                    </div>
-                </div>
-            </div>
-
-            <!-- Controls -->
-            <a class="left carousel-control" href="#carousel-midgard" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#carousel-midgard" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+        <div class="video-container">
+        <video autoplay loop>
+            <source src="videos/backgroundvideo3.mp4" type="video/mp4">
+        </video>
         </div>
-    </section>
-    <section class="featured-sections" id="feature-area-text">
-        <div class="feature-content">
-            <div class="container">
-                <h1>6 years of Midgard</h1>
-                <h2>Join our community and see what an enhanced vanilla server is like.</p>
-                    <a class="btn btn-default" href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Submit
-                        Whitelist Request</a>
-            </div>
+        <div class="new-feature">
+        <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h1>At the heart of Midgard is you.</h1>
+               <h2>We'd love to see you become apart of our community.</p>
+                    <a class="btn btn-default" href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Apply</a></div>
+            <div class="col-md-4"></div>
+        </div>
+        </div>
+        </div>
+
     </section>
 
     <section class="featured-sections" id="about">
@@ -262,8 +226,7 @@
                             <small>Survival 1.11.2</small>
                         </h2>
                         <p>Midgard's flagship Survival Minecraft server.</p>
-                        <a class="btn btn-default" href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Submit
-                            Whitelist Request</a>
+                        <a class="btn btn-default" href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Apply</a>
                     </div>
                 </div>
             </div>
@@ -374,7 +337,7 @@
 
 
             $('html, body').stop().animate({
-                scrollTop: $(destination).offset().top - 55
+                scrollTop: $(destination).offset().top - 20
             }, 1500, 'easeInOutExpo');
         });
 
@@ -383,17 +346,6 @@
 
 </script>
 
-<script>
-    MinecraftAPI.getServerStatus('mc.midgardmc.com', {
-        port: 25565 // optional, only if you need a custom port
-    }, function (err, status) {
-        if (err) {
-            return document.querySelector('.server-status').innerHTML = 'Error loading status';
-        }
 
-        // you can change these to your own message!
-        document.querySelector('.server-online').innerHTML = status.online ? 'Online' : 'Offline';
-    });
-</script>
 </body>
 </html>
