--- a/index.html
+++ b/index.html
@@ -110,8 +110,9 @@
         <div class="row">
             <div class="col-md-6">
                 <h1>At the heart of Midgard is you.</h1>
-               <h2>We'd love to see you become apart of our community.</p>
-                    <a class="btn btn-default" href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Apply</a></div>
+               <h2>We'd love to see you become a part of our community.</p>
+                    <a class="btn btn-default" href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Apply</a>
+                   <p>Featured Build by Legida</p></div>
             <div class="col-md-4"></div>
         </div>
         </div>
