--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <h1>At the heart of Midgard is you.</h1>
                <h2>We'd love to see you become a part of our community.</p>
                     <a class="btn btn-default" href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Apply</a>
-                   <p>Featured Build by Legida</p></div>
+                   <p>Featured build by Legida.</p></div>
             <div class="col-md-4"></div>
         </div>
         </div>
@@ -136,6 +136,8 @@
                 </div>
                 <div class="col-md-6">
                     <img src="images/featbuilds1.png" class="img-responsive" alt="Responsive image">
+                    <br>
+                    <p>Featured builds by NgtFlyer and Timoteus_I.</p>
                 </div>
             </div>
         </div>
