--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <section id="feature-area">
         <div class="video-container">
         <video autoplay loop>
-            <source src="videos/backgroundvideo3.mp4" type="video/mp4">
+            <source src="videos/videoheader.mp4" type="video/mp4">
         </video>
         </div>
         <div class="new-feature">
@@ -112,7 +112,7 @@
                 <h1>At the heart of Midgard is you.</h1>
                <h2>We'd love to see you become a part of our community.</p>
                     <a class="btn btn-default" href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Apply</a>
-                   <p>Featured build by Legida.</p></div>
+                   <p>Featured build by nullmatrix.</p></div>
             <div class="col-md-4"></div>
         </div>
         </div>
@@ -214,41 +214,24 @@
 
 <section class="featured-sections" id="servers">
     <div class="container">
-        <div class="row">
-            <div class="col-md-7 col-lg-7">
-                <h1>See what you're missing.</h1>
-            </div>
+        <h1>See what you're missing.</h1>
+    <div class="row">
+        <div class="col-sm-3">
+            <h2>Minecraft</h2>
+            <h4>Survival 1.11.2</h4>
+            <p>Midgard's flagship Survival Minecraft server.</p>
+            <a class="btn btn-default" href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Apply</a>
         </div>
-        <div class="row">
-            <div class="col-md-6 col-lg-6">
-                <div class="server-feature" id="minecraft">
-                    <div id="mcimage"></div>
-                    <div class="server-feature-container">
-                        <h2>Minecraft</h2>
-                        <h2>
-                            <small>Survival 1.11.2</small>
-                        </h2>
-                        <p>Midgard's flagship Survival Minecraft server.</p>
-                        <a class="btn btn-default" href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Apply</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-6">
-                <div class="server-feature" id="tf2">
-                    <div id="tf2image"></div>
-                    <div class="server-feature-container">
-                        <div class="server-text">
-                            <h2>Team Fortress 2</h2>
-                            <p>Midgard's Team Fortress 2 server is open for users who want to take a break from
-                                Minecraft.</p>
-                            <p>Connection Info:</p>
-                            <code>tf2.midgardmc.com Password: multipass</code>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="col-sm-3">
+            <h2>Team Fortress 2</h2>
+            <p>Midgard's Team Fortress 2 server is open for users who want to take a break from
+                Minecraft.</p>
+            <p>Connection Info:</p>
+            <code>tf2.midgardmc.com Password: multipass</code>
         </div>
     </div>
+    </div>
+</section>
 </section>
 </div>
 <footer>
@@ -262,7 +245,7 @@
                        target="_blank">Rules</a>
                 </li>
                 <li><a data-toggle="tooltip" data-placement="right" title="Available when whitelisted.">Mumble</a></li>
-                <li><a href="zoocam.html">Zoo Cam</a></li>
+                <li><a href="https://www.twitch.tv/midgardmc">Zoo Cam</a></li>
             </ul>
         </div>
         <div class="col-md-3">
@@ -275,17 +258,22 @@
             <h3>Social</h3>
             <div class="row">
                 <div class="col-md-2">
-                    <a href="https://twitter.com/intent/follow?&screen_name=midgardmc"><i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://twitter.com/intent/follow?&screen_name=midgardmc"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
                 </div>
                 <div class="col-md-2">
-                    <a href="https://www.facebook.com/mcmidgard"><i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://www.facebook.com/mcmidgard"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a>
                 </div>
                 <div class="col-md-2">
-                    <a href="https://www.reddit.com/r/MidgardMC/"><i class="fa fa-reddit-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://www.reddit.com/r/MidgardMC/"><i class="fa fa-reddit fa-2x" aria-hidden="true"></i></a>
                 </div>
                 <div class="col-md-2">
-                    <a href="https://github.com/MidgardMC"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://github.com/MidgardMC"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
                 </div>
+                <div class="col-md-2"><a href="https://twitch.tv/midgardmc/"><i class="fa fa-twitch fa-2x" aria-hidden="true"></i></a></div>
+            </div>
+            <h3>Contact</h3>
+            <div class="row">
+                <div class="col-md-2"><a href="mailto:midgardhelp@outlook.com"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a></div>
             </div>
         </div>
         <div class="col-md-3" id="footer-midgard">
