--- a/rules.html
+++ b/rules.html
@@ -20,30 +20,28 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <style>
-        #redirect{
+        body {
+
+            background-color: #25c2f2;
+            color: white;
+
+        }
+        #redirect {
+            margin-top: 200px;
             height: 100vh;
         }
     </style>
 </head>
 <body>
-<header id="top">
-    <nav class="navbar navbar-default navbar-fixed-top navbar-midgard">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                        aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand smooth" href="#top">
-                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 90.2 90.2" style="enable-background:new 0 0 90.2 90.2; width: 35px; fill: #ffffff" xml:space="preserve">
+<div class="content">
+    <div class="container" id="redirect">
+        <div class="row">
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 90.2 90.2" style="enable-background:new 0 0 90.2 90.2; width: 100px; fill: #ffffff" xml:space="preserve">
 <style type="text/css">
 	.st0 {
         fill: #ffffff;
-        width: 40px;
+        width: 100px;
 
     }
 </style>
@@ -60,46 +58,11 @@
 		<rect x="70.2" y="70.5" width="10.9" height="10.9"/>
 	</g>
 </g>
-                </a>
-            </div>
-        </div>
-    </nav>
-</header>
-<div class="content">
-<div class="container" id="redirect">
-    <h1>Redirecting...</h1>
-</div>
-</div>
-<footer>
-    <div class="container">
-        <div class="col-md-3">
-            <h3>Community Links</h3>
-            <ul>
-                <li><a href="http://mc.midgardmc.com:8123" target="_blank">DynMap</a></li>
-                <li>
-                    <a href="https://docs.google.com/document/d/1EFTXAGFpxewtfJz2Z84pFjjzoqI38OAehEI4YNLtsIM/edit?usp=sharing"
-                       target="_blank">Rules</a>
-                </li>
-            </ul>
-        </div>
-        <div class="col-md-3">
-            <h3>Social</h3>
-            <ul>
-                <li><a href="#">Mumble</a></li>
-                <li><a href="https://twitter.com/intent/follow?&screen_name=midgardmc">Twitter</a></li>
-                <li><a href="https://www.reddit.com/r/MidgardMC/">Reddit</a></li>
-                <li><a href="https://github.com/MidgardMC">GitHub</a></li>
-            </ul>
-        </div>
-        <div class="col-md-3">
-        </div>
-        <div class="col-md-3">
+        <h1>Redirecting...</h1>
         </div>
     </div>
-    </div>
-</footer>
 </div>
-
+</div>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -129,7 +92,7 @@
 </script>
 
 <script>
-window.location = "https://docs.google.com/document/d/1EFTXAGFpxewtfJz2Z84pFjjzoqI38OAehEI4YNLtsIM/edit?usp=sharing";
+    window.location = "https://docs.google.com/document/d/1EFTXAGFpxewtfJz2Z84pFjjzoqI38OAehEI4YNLtsIM/edit?usp=sharing";
 </script>
 
 </body>
