--- a/zoocam.html
+++ b/zoocam.html
@@ -3,78 +3,45 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Midgard is a whitelist Minecraft Community.">
-    <meta name="keywords" content="Minecraft,gaming,video,games">
-    <meta name="author" content="Midgard">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Midgard</title>
 
-    <title>Midgard Zoo Cam</title>
-    <!-- Reset CSS -->
     <link href="css/reset.css" rel="stylesheet" type="text/css"/>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom Styles -->
     <link href="css/styles.css" rel="stylesheet">
-    <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="manifest.json">
-    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#25c2f2">
-    <meta name="theme-color" content="#ffffff">
+    <link href="css/styles-rulespage.css" rel="stylesheet">
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <script src="https://use.fontawesome.com/5f0a3a0421.js"></script>
     <style>
         body {
-            background-color: #54341f;
+
+            background-color: #25c2f2;
             color: white;
-        }
 
-        iframe {
-            margin-top: 10px;
-            width: 100%;
         }
-
-        .navbar-default {
-            background-color: #348f19;
-            color: white;
+        #redirect {
+            margin-top: 200px;
+            height: 100vh;
         }
-
-        #zoocampage a {
-            color: white;
-            text-decoration: underline;
-        }
-
-        .zoo-content {
-            margin-bottom: 50px;
-        }
-
     </style>
 </head>
 <body>
-<header id="top">
-    <nav class="navbar navbar-default navbar-fixed-top navbar-midgard">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                        aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand smooth" href="index.html">
-                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 90.2 90.2" style="enable-background:new 0 0 90.2 90.2; width: 50px; fill: #ffffff" xml:space="preserve">
+<div class="content">
+    <div class="container" id="redirect">
+        <div class="row">
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 90.2 90.2" style="enable-background:new 0 0 90.2 90.2; width: 100px; fill: #ffffff" xml:space="preserve">
 <style type="text/css">
 	.st0 {
         fill: #ffffff;
-        width: 40px;
+        width: 100px;
 
     }
 </style>
@@ -91,116 +58,41 @@
 		<rect x="70.2" y="70.5" width="10.9" height="10.9"/>
 	</g>
 </g>
-                </a>
-            </div>
-            <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Visit the Zoo</a></li>
-                    <li id="zoo-cam"><a href="zoocam.html"><span class="glyphicon glyphicon-facetime-video" aria-hidden="true"></span> Zoo Cam</a></li>
-                    <li></li>
-                </ul>
-            </div><!--/.nav-collapse -->
-        </div>
-
-    </nav>
-</header>
-<div class="content">
-    <div class="container" id="zoocampage">
-        <div class="row">
-            <div class="col-md-12">
-                <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmcmidgard%2Fvideos%2F626985650826777%2F&width=1280"
-                        width="1280" height="720" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-                        allowTransparency="true" allowFullScreen="true"></iframe>
-            </div>
-        </div>
-        <div class="zoo-content">
-            <h1>Zoo Cam</h1>
-            <p>Don't see a live video feed? Either we're offline or streaming to our <a
-                    href="https://www.youtube.com/channel/UCtw4_2ahi3QpRFeWEMlJALg/live">YouTube Channel</a>.</p>
-            <p>This feed is still in Beta. We're still finding the best solution to stream to.</p>
-            <h3>Schedule</h3>
-            <p>Most days in the afternoon EST for around 6-12 hours.</p>
+        <h1>Redirecting...</h1>
         </div>
     </div>
 </div>
-</div>
-<footer>
-    <div class="container">
-        <div class="col-md-3">
-            <h3>Community</h3>
-            <ul>
-                <li><a href="http://mc.midgardmc.com:8123" target="_blank">DynMap</a></li>
-                <li>
-                    <a href="https://docs.google.com/document/d/1EFTXAGFpxewtfJz2Z84pFjjzoqI38OAehEI4YNLtsIM/edit?usp=sharing"
-                       target="_blank">Rules</a>
-                </li>
-                <li><a data-toggle="tooltip" data-placement="right" title="Available when whitelisted.">Mumble</a></li>
-                <li><a href="zoocam.html">Zoo Cam</a></li>
-            </ul>
-        </div>
-        <div class="col-md-3">
-            <h3>Guides</h3>
-            <ul>
-                <li><a href="signshop.html">Sign Shop</a> </li>
-            </ul>
-        </div>
-        <div class="col-md-3">
-            <h3>Social</h3>
-            <div class="row">
-                <div class="col-md-2">
-                    <a href="https://twitter.com/intent/follow?&screen_name=midgardmc"><i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i></a>
-                </div>
-                <div class="col-md-2">
-                    <a href="https://www.facebook.com/mcmidgard"><i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i></a>
-                </div>
-                <div class="col-md-2">
-                    <a href="https://www.reddit.com/r/MidgardMC/"><i class="fa fa-reddit-square fa-3x" aria-hidden="true"></i></a>
-                </div>
-                <div class="col-md-2">
-                    <a href="https://github.com/MidgardMC"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-3" id="footer-midgard">
-            <h3></h3>
-            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 90.2 90.2" style="enable-background:new 0 0 90.2 90.2; width: 50px; fill: #5e5e5e" xml:space="preserve">
-                <style type="text/css">
-	.st0-2 {
-        fill: #5e5e5e;
-        width: 40px;
-
-    }
-            </style>
-        <g id="Layer_2">
-	        <g id="Layer_1-2">
-		<path class="st0-2" d="M84.6,5.6v79h-79v-79L84.6,5.6 M90.2,0H0v90.2h90.2V0z"/>
-		<rect x="37.5" y="40" width="10.9" height="10.9"/>
-		<rect x="37.5" y="55.3" width="10.9" height="10.9"/>
-		<rect x="37.5" y="70.5" width="10.9" height="10.9"/>
-		<rect x="53.9" y="47" width="10.9" height="10.9"/>
-		<rect x="53.9" y="62.2" width="10.9" height="10.9"/>
-		<rect x="70.2" y="40" width="10.9" height="10.9"/>
-		<rect x="70.2" y="55.3" width="10.9" height="10.9"/>
-		<rect x="70.2" y="70.5" width="10.9" height="10.9"/>
-	        </g>
-        </g>
-            </svg>
-            <p>Midgard is a community that is entirely volunteer run.</p>
-            <p><span class="glyphicon glyphicon-copyright-mark" aria-hidden="true"></span> Copyright Midgard MC 2017</p>
-        </div>
-    </div>
-    </div>
-</footer>
 </div>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.easing.1.3.js"></script>
 <script>$('.collapse').collapse()</script>
+<script type="text/javascript">
+
+    $(document).ready(function () {
+
+        // EVENT HANDLERS
+        $('li a').on('click', function (event) {
+            event.preventDefault();
+
+
+            var destination = $(this).attr('href');
+
+
+            $('html, body').stop().animate({
+                scrollTop: $(destination).offset().top - 55
+            }, 1500, 'easeInOutExpo');
+        });
+
+    });
+
+
+</script>
 
 <script>
-    // window.location = "http://www.youtube.com/channel/UCtw4_2ahi3QpRFeWEMlJALg/live";
+    window.location = "https://twitch.tv/midgardmc";
 </script>
 
 </body>
