--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom Styles -->
     <link href="css/styles.css" rel="stylesheet">
+    <link href="css/animations.css" rel="stylesheet">
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
@@ -100,20 +101,20 @@
 </header>
 <div class="content">
     <section id="feature-area">
-        <div class="video-container">
-        <video autoplay loop>
-            <source src="videos/videoheader.mp4" type="video/mp4">
-        </video>
-        </div>
         <div class="new-feature">
         <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <h1>At the heart of Midgard is you.</h1>
-               <h2>We'd love to see you become a part of our community.</p>
+                <h1>A world built by you.</h1>
+                <h2>Become a member of Midgard today.</h2>
+                <p>
                     <a class="btn btn-default" href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Apply</a>
-                   <p>Featured build by nullmatrix.</p></div>
-            <div class="col-md-4"></div>
+                </p>
+            </div>
+            <div class="col-md-2"></div>
+                <div class="col-md-2">
+                    <div id="object" class="floating"><img src="images/cube.svg"></div>
+                </div>
         </div>
         </div>
         </div>
