--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
         <div class="new-feature">
         <div class="container">
         <div class="row">
-            <div class="col-md-6">
-                <h1>A world built by you.</h1>
+            <div class="col-md-7">
+                <h1>Join us for 6 years of awesome.</h1>
                 <h2>Become a member of Midgard today.</h2>
                 <p>
                     <a class="btn btn-default" href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Apply</a>
@@ -113,7 +113,7 @@
             </div>
             <div class="col-md-2"></div>
                 <div class="col-md-2">
-                    <div id="object" class="floating"><img src="images/cube.svg"></div>
+                    <!--<div id="object" class="floating"><img src="images/cube.svg"></div>-->
                 </div>
         </div>
         </div>
