--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
         <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <h1>Summer is a time for new experiences.</h1>
-                <h2>Become a member of Midgard today.</h2>
+                <h1>Community driven.</h1>
+                <h2>Midgard is a Minecraft community with the focus on an enhanced vanilla game play experience.</h2>
                 <p>
-                    <a class="btn btn-default" href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Apply</a>
+                    <a class="btn btn-default" href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Apply Today</a>
                 </p>
             </div>
             <div class="col-md-2"></div>
