Cleaned up files, design tweaks

--- a/index.html
+++ b/index.html
@@ -111,9 +111,10 @@
                     <a class="btn btn-default" href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Apply Today</a>
                 </p>
             </div>
-            <div class="col-md-2"></div>
-                <div class="col-md-2">
-                    <div id="object" class="floating"><img src="images/cube.svg"></div>
+            <!--<div class="col-md-2"></div>-->
+                <div class="col-md-6">
+                    <img src="images/featbuilds1.png" class="feat-img img-responsive" alt="Responsive image">
+                    <!--<div id="object" class="floating"><img src="images/cube.svg"></div>-->
                 </div>
         </div>
         </div>
@@ -136,9 +137,7 @@
                         While we cater to the mature, seasoned player, our server is family-friendly.</p>
                 </div>
                 <div class="col-md-6">
-                    <img src="images/featbuilds1.png" class="img-responsive" alt="Responsive image">
-                    <br>
-                    <p>Featured builds by NgtFlyer and Timoteus_I.</p>
+                    <img src="images/aboutfeatimg.png" class="img-responsive" alt="Responsive image">
                 </div>
             </div>
         </div>
@@ -246,7 +245,8 @@
                        target="_blank">Rules</a>
                 </li>
                 <li><a data-toggle="tooltip" data-placement="right" title="Available when whitelisted.">Mumble</a></li>
-                <li><a href="https://www.twitch.tv/midgardmc">Zoo Cam</a></li>
+                <li><a data-toggle="tooltip" data-placement="right" title="Available when whitelisted.">Discord</a></li>
+                <!--<li><a href="https://www.twitch.tv/midgardmc">Zoo Cam</a></li>-->
             </ul>
         </div>
         <div class="col-md-3">
