--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
     </nav>
 </header>
 <div class="content">
+    <div class="midgardalert">
+        <div class="container">
+            <p>Having issues connecting? <a href="https://www.youtube.com/watch?v=DT3t0jCqotA">Downgrade to 1.11.2</a> to continue enjoying Midgard.</p>
+        </div>
+    </div>
     <section id="feature-area">
         <div class="new-feature">
         <div class="container">
