Added new Connect page

--- a/index.html
+++ b/index.html
@@ -249,8 +249,7 @@
                     <a href="https://docs.google.com/document/d/1EFTXAGFpxewtfJz2Z84pFjjzoqI38OAehEI4YNLtsIM/edit?usp=sharing"
                        target="_blank">Rules</a>
                 </li>
-                <li><a data-toggle="tooltip" data-placement="right" title="Available when whitelisted.">Mumble</a></li>
-                <li><a data-toggle="tooltip" data-placement="right" title="Available when whitelisted.">Discord</a></li>
+                <li><a href="connect.html">Connect</a></li>
                 <!--<li><a href="https://www.twitch.tv/midgardmc">Zoo Cam</a></li>-->
             </ul>
         </div>
