--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <div class="content">
     <div class="midgardalert">
         <div class="container">
-            <p>Having issues connecting? <a href="https://www.youtube.com/watch?v=DT3t0jCqotA">Downgrade to 1.11.2</a> to continue enjoying Midgard.</p>
+            <p><strong>Downtime Alert!</strong> Tonight we will be taking the server down around 9:00 PM EST to perform maintenance and upgrade to 1.12!</p>
         </div>
     </div>
     <section id="feature-area">
