--- a/index.html
+++ b/index.html
@@ -100,11 +100,6 @@
     </nav>
 </header>
 <div class="content">
-    <div class="midgardalert">
-        <div class="container">
-            <p><strong>Downtime Alert!</strong> Tonight we will be taking the server down around 9:00 PM EST to perform maintenance and upgrade to 1.12!</p>
-        </div>
-    </div>
     <section id="feature-area">
         <div class="new-feature">
         <div class="container">
@@ -112,6 +107,7 @@
             <div class="col-md-6">
                 <h1>Community driven.</h1>
                 <h2>Midgard is a Minecraft community with the focus on an enhanced vanilla game play experience.</h2>
+                <h3>Now updated to 1.12!</h3>
                 <p>
                     <a class="btn btn-default" href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Apply Today</a>
                 </p>
@@ -223,7 +219,7 @@
     <div class="row">
         <div class="col-sm-3">
             <h2>Minecraft</h2>
-            <h4>Survival 1.11.2</h4>
+            <h4>Survival 1.12</h4>
             <p>Midgard's flagship Survival Minecraft server.</p>
             <a class="btn btn-default" href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Apply</a>
         </div>
