--- a/index.html
+++ b/index.html
@@ -18,11 +18,25 @@
     <link href="css/animations.css" rel="stylesheet">
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="manifest.json">
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#25c2f2">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="apple-mobile-web-app-title" content="Midgard">
+    <meta name="application-name" content="Midgard">
+    <meta name="theme-color" content="#25c2f2">
+    <!-- Open Graph -->
+    <meta property="og:image" content="og-image.jpg">
+    <meta property="og:image:width" content="1852">
+    <meta property="og:image:height" content="970">
+    <meta property="og:description" content="A Minecraft server focused on community and quality builds.">
+    <meta property="og:title" content="Midgard">
+    <meta property="og:url" content="http://www.midgardmc.com">
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@midgardmc">
+    <meta name="twitter:title" content="Midgard">
+    <meta name="twitter:description" content="A Minecraft server focused on community and quality builds.">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -45,29 +59,8 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand smooth" href="#top">
-                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 90.2 90.2" style="enable-background:new 0 0 90.2 90.2; width: 50px; fill: #ffffff" xml:space="preserve">
-<style type="text/css">
-	.st0 {
-        fill: #ffffff;
-        width: 40px;
 
-    }
-</style>
-<g id="Layer_2">
-	<g id="Layer_1-2">
-		<path class="st0" d="M84.6,5.6v79h-79v-79L84.6,5.6 M90.2,0H0v90.2h90.2V0z"/>
-		<rect x="37.5" y="40" width="10.9" height="10.9"/>
-		<rect x="37.5" y="55.3" width="10.9" height="10.9"/>
-		<rect x="37.5" y="70.5" width="10.9" height="10.9"/>
-		<rect x="53.9" y="47" width="10.9" height="10.9"/>
-		<rect x="53.9" y="62.2" width="10.9" height="10.9"/>
-		<rect x="70.2" y="40" width="10.9" height="10.9"/>
-		<rect x="70.2" y="55.3" width="10.9" height="10.9"/>
-		<rect x="70.2" y="70.5" width="10.9" height="10.9"/>
-	</g>
-</g>
-                    </svg>
+                    <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" style="width:50px;"><defs><style>.cls-1{fill:#fff;}</style></defs><title>Artboard 5</title><rect class="cls-1" x="90.86" y="332.1" width="89.04" height="89.04"/><rect class="cls-1" x="90.86" y="90.86" width="89.04" height="89.04"/><rect class="cls-1" x="332.1" y="90.86" width="89.04" height="89.04"/><rect class="cls-1" x="211.48" y="151.43" width="89.04" height="89.04"/><rect class="cls-1" x="90.86" y="211.48" width="89.04" height="89.04"/><rect class="cls-1" x="332.1" y="332.1" width="89.04" height="89.04"/><rect class="cls-1" x="332.1" y="211.48" width="89.04" height="89.04"/><rect class="cls-1" x="211.48" y="272.05" width="89.04" height="89.04"/></svg>
                 </a>
                 <!--<div class="server-status">
                     <span class="server-online"></span>
