Twitter Card Update

--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
     <meta property="og:title" content="Midgard">
     <meta property="og:url" content="http://www.midgardmc.com">
     <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@midgardmc">
     <meta name="twitter:title" content="Midgard">
     <meta name="twitter:description" content="A Minecraft server focused on community and quality builds.">
+    <meta name="twitter:image" content="http://www.midgardmc.com/og-image.jpg">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
