--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-3">
+                <div class="col-md-4">
                     <div class="team-members">
                         <img src="https://minotar.net/avatar/ngtflyer" alt="ngtflyer" class="img-rounded">
                         <h2>NgtFlyer</h2>
                         <p>Owner // Admin</p>
                         <div class="row">
-                            <div class="col-sm-2">
+                            <div class="col-md-4">
                                 <a href="https://www.twitter.com/ngtflyer"><i class="fa fa-twitter fa-2x"
                                                                               aria-hidden="true"></i></a>
                             </div>
@@ -169,41 +169,22 @@
                         </div>
                     </div>
                 </div>
-                <div class="team-members col-sm-3">
+                <div class="col-md-4">
                     <div class="team-members">
                         <img src="https://minotar.net/avatar/nullmatrix" alt="nullmatrix" class="img-rounded">
                         <h2>NullMatrix</h2>
                         <p>Zoo Keeper // Admin</p>
                     </div>
                 </div>
-                <div class="team-members col-sm-3">
-                    <div class="team-members">
-                        <img src="https://minotar.net/avatar/spinnibbler" alt="spinnibbler" class="img-rounded">
-                        <h2>SpinNibbler</h2>
-                        <p>Graphic & Web Design Lead // Admin</p>
-                        <div class="row">
-                            <div class="col-sm-2">
-                                <a href="https://www.twitter.com/spinwtf/"><i class="fa fa-twitter fa-2x"
-                                                                              aria-hidden="true"></i></a>
-                            </div>
-                            <div class="col-sm-2">
-                                <a href="https://www.behance.net/calebflatten"><i class="fa fa-behance fa-2x"
-                                                                                  aria-hidden="true"></i></a>
-                            </div>
-                            <div class="col-sm-2">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="team-members col-sm-3">
+                            <div class="col-md-4">
                     <div class="team-members">
                         <img src="https://minotar.net/avatar/vantes" alt="vantes" class="img-rounded">
                         <h2>Vantes</h2>
                         <p>Resident Cool Guy // Admin</p>
                     </div>
                 </div>
+                </div>
             </div>
-        </div>
 </div>
 </section>
 
