--- a/about.htm
+++ b/about.htm
@@ -1,4 +1,53 @@
-<?php include('header.php'); ?>
+<head>
+        <title>Midgard Minecraft Server</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <link href="assets/main.css" rel="stylesheet">
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Roboto+Slab:400,700" rel="stylesheet"> 
+    </head>
+    <body>
+        <div class="wrapper">
+
+<div class="container-fluid header">
+<div class="row">
+
+    <div class="col-md-4">
+    <a href="index.htm"><img src="img/logo.png" class="img-responsive logo" /></a>
+    </div>
+
+    <div class="col-md-8 menu">
+
+        <nav class="navbar navbar-default">
+            <div class="container-fluid nav">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <i class="fa fa-bars fa-2x"></i>
+                </button>
+                </div>
+
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="index.php">Home <span class="sr-only">(current)</span></a></li>
+                        <li><a href="about.php">About</a></li>
+                        <!--<li><a href="#">Servers</a></li>-->
+                        <li><a href="http://imgur.com/a/0GWt1" target="_blank">Gallery</a></li>
+                        <li><a href="map.php">Map</a></li>
+                        <li><a href="rules.php">Rules</a></li>
+                        <li class="menu-apply"><a href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Apply</a></li>
+                    </ul>
+                </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+
+        </div>
+
+    </div>
+</div>
 
 <div class="container-fluid page-title text-center">
     <div class="row">
@@ -126,8 +175,8 @@
             <hr />
             <ul class="list-unstyled">
                 <li><a href="#" target="_blank">Server Walkthrough</a></li>
-                <li><a href="signshop.php">SignShop Tutorial</a></li>
-                <li><a href="rules.php">Rules &amp; Guidelines</a></li>
+                <li><a href="signshop.htm">SignShop Tutorial</a></li>
+                <li><a href="rules.htm">Rules &amp; Guidelines</a></li>
             </ul>
             
 
@@ -135,4 +184,24 @@
     </div>
 </div>
 
-<?php include('footer.php'); ?>
+<div class="container-fluid footer text-center">
+    <div class="row">
+        <div class="col-md-12 col-sm-12 col-xs-12">
+            <ul class="list-inline social">
+                <li><a href="https://www.facebook.com/mcmidgard" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+                <li><a href="https://twitter.com/intent/follow?&screen_name=midgardmc" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
+                <li><a href="https://www.reddit.com/r/MidgardMC/" target="_blank"><i class="fab fa-reddit-square"></i></a></li>
+                <li><a href="https://discord.gg/E2BN4Cz" target="_blank"><i class="fab fa-discord"></i></a></li>
+            </ul>
+            <p>Copyright &copy;<?php echo date("Y"); ?> All Rights Reserved. Logo and Website by <a href="#" target="_blank">Adena Marketing</a></p>
+        </div>
+    </div>
+</div>
+
+</div>
+<script src="http://code.jquery.com/jquery-3.2.1.min.js"
+integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    </body>
+</html>
