Fixed menu on about page

--- a/about.htm
+++ b/about.htm
@@ -33,12 +33,12 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="index.php">Home <span class="sr-only">(current)</span></a></li>
-                        <li><a href="about.php">About</a></li>
+                        <li><a href="index.htm">Home <span class="sr-only">(current)</span></a></li>
+                        <li><a href="about.htm">About</a></li>
                         <!--<li><a href="#">Servers</a></li>-->
                         <li><a href="http://imgur.com/a/0GWt1" target="_blank">Gallery</a></li>
-                        <li><a href="map.php">Map</a></li>
-                        <li><a href="rules.php">Rules</a></li>
+                        <li><a href="map.htm">Map</a></li>
+                        <li><a href="rules.htm">Rules</a></li>
                         <li class="menu-apply"><a href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">Apply</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
