Fixed language mistake on command listing

--- a/about.htm
+++ b/about.htm
@@ -89,11 +89,11 @@
             <div class="list-group">
                 <div class="list-group-item">
                     <h4 class="list-group-item-heading">Home commands</h4>
-                    <p class="list-group-item-text">/home command with up to two homes plus a bed spawn, so you can always go home.</p>
+                    <p class="list-group-item-text">/home command with up to two homes plus a bed spawn, so you can always find your way home.</p>
                 </div>
                 <div class="list-group-item">
                     <h4 class="list-group-item-heading">Spawn command</h4>
-                    <p class="list-group-item-text">/spawn command with up to easily and quickly get to Spawn!</p>
+                    <p class="list-group-item-text">/spawn command to easily and quickly get to Spawn!</p>
                 </div>
                 <div class="list-group-item">
                     <h4 class="list-group-item-heading">Resource Worlds</h4>
