--- a/about.htm
+++ b/about.htm
@@ -193,7 +193,7 @@
                 <li><a href="https://www.reddit.com/r/MidgardMC/" target="_blank"><i class="fab fa-reddit-square"></i></a></li>
                 <li><a href="https://discord.gg/E2BN4Cz" target="_blank"><i class="fab fa-discord"></i></a></li>
             </ul>
-            <p>Copyright &copy;<?php echo date("Y"); ?> All Rights Reserved. Logo and Website by <a href="#" target="_blank">Adena Marketing</a></p>
+            <p>Copyright &copy;<?php echo date("Y"); ?> All Rights Reserved. Logo and Website by <a href="https://adenamarketing.com" target="_blank">Adena Marketing</a></p>
         </div>
     </div>
 </div>
